Revert "OFBiz 14.12"
This reverts commit b8e89113290fd36e3532e6fca70f93ddf35fa90b.